Make runtime-config extensible by module
